2018-12
=======

* new: intToNumeralSystem() (2018-12-21)
* new: createIdAlong() (2018-12-16)

2018-10-22
==========

* new: combineAlternatingly()

2016-07-15 
==========

* bug fix in .defaultIf(): was not working as expected with x = NULL
* package prepared for automatic tests
* new test for .defaultIf()

Current changes
===============
* hsPrepPdf, hsShowPdf moved from kwb.base
* hsCatLists removed (it was just the same as c()!)

Changes in kwb.utils 0.1.0
==========================
* creation of the package