@@ -1,6 +1,7 @@
 2018-12
 =======
 
+* new: encode(), decode(), printable_chars() (2019-01-03)
 * new: intToNumeralSystem() (2018-12-21)
 * new: createIdAlong() (2018-12-16)
 
